aggiungo componenti pagina con float

--- a/index.html
+++ b/index.html
@@ -18,24 +18,41 @@
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur:</p>
-        <div id="container">
-            <div class="card">
-                
+        <div id="container" class="clearfix">
+            <div class="card f-left">
+                <!-- lato sinistro -->
+                <img class="img-card f-left clearfix" src="images/male1.png" alt="male1">
+                <!-- lato destro -->
+                <div class="caption-contain f-right">
+                    <h4 class="name">Marco Bianchi</h4>
+                    <span class="caption">Designer</span>
+                    <span class="card-mail">marcobianchi@team.com</span>
+                </div>
             </div>
-            <div class="card">
-
+            <div class="card f-left">
+                <img class="img-card f-left clearfix" src="images/female1.png" alt="female1">
+                <div class="caption-contain f-right">
+                    <h4 class="name">Laura Rossi</h4>
+                    <span class="caption">Front-end Developer</span>
+                    <span class="card-mail">laurarossi@team.com</span>
+                </div>
             </div>
-            <div class="card">
-
+            <div class="card f-left">
+                <img class="img-card f-left clearfix" src="images/male2.png" alt="male2">
+                <div class="caption-contain f-right">
+                    <h4 class="name">Giorgio Verdi</h4>
+                    <span class="caption">Back-end Developer</span>
+                    <span class="card-mail">giorgioverdi@team.com</span>
+                </div>
             </div>
-            <div class="card">
-
+            <div class="card f-left">
+                <img class="img-card" src="images/female2.png" alt="female2">
             </div>
-            <div class="card">
-
+            <div class="card f-left">
+                <img class="img-card" src="images/male3.png" alt="male3">
             </div>
-            <div class="card">
-
+            <div class="card f-left">
+                <img class="img-card" src="images/female3.png" alt="female3">
             </div>
         </div>
     </main>
