--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         <h1 id="title">Meet Our Team</h1>
     </header>
     <main>
-        <p id="par">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        <p id="par">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur:</p>
         <div id="container" class="clearfix">
-            <div class="card f-left">
+            <div class="card f-left clearfix">
                 <!-- lato sinistro -->
-                <img class="img-card f-left clearfix" src="images/male1.png" alt="male1">
+                <img class="img-card f-left" src="images/male1.png" alt="male1">
                 <!-- lato destro -->
                 <div class="caption-contain f-right">
                     <h4 class="name">Marco Bianchi</h4>
@@ -29,30 +30,45 @@
                     <span class="card-mail">marcobianchi@team.com</span>
                 </div>
             </div>
-            <div class="card f-left">
-                <img class="img-card f-left clearfix" src="images/female1.png" alt="female1">
+            <div class="card f-left clearfix">
+                <img class="img-card f-left" src="images/female1.png" alt="female1">
                 <div class="caption-contain f-right">
                     <h4 class="name">Laura Rossi</h4>
                     <span class="caption">Front-end Developer</span>
                     <span class="card-mail">laurarossi@team.com</span>
                 </div>
             </div>
-            <div class="card f-left">
-                <img class="img-card f-left clearfix" src="images/male2.png" alt="male2">
+            <div class="card f-left clearfix">
+                <img class="img-card f-left" src="images/male2.png" alt="male2">
                 <div class="caption-contain f-right">
                     <h4 class="name">Giorgio Verdi</h4>
                     <span class="caption">Back-end Developer</span>
                     <span class="card-mail">giorgioverdi@team.com</span>
                 </div>
             </div>
-            <div class="card f-left">
-                <img class="img-card" src="images/female2.png" alt="female2">
+            <div class="card f-left clearfix">
+                <img class="img-card f-left" src="images/female2.png" alt="female2">
+                <div class="caption-contain f-right">
+                    <h4 class="name">Marta Ipsum</h4>
+                    <span class="caption">SEO Specialist</span>
+                    <span class="card-mail">martaipsum@team.com</span>
+                </div>
             </div>
-            <div class="card f-left">
-                <img class="img-card" src="images/male3.png" alt="male3">
+            <div class="card f-left clearfix">
+                <img class="img-card f-left" src="images/male3.png" alt="male3">
+                <div class="caption-contain f-right">
+                    <h4 class="name">Roberto Lorem</h4>
+                    <span class="caption">Project Manager</span>
+                    <span class="card-mail">robertolorem@team.com</span>
+                </div>
             </div>
-            <div class="card f-left">
-                <img class="img-card" src="images/female3.png" alt="female3">
+            <div class="card f-left clearfix">
+                <img class="img-card f-left" src="images/female3.png" alt="female3">
+                <div class="caption-contain f-right">
+                    <h4 class="name">Daniela Amet</h4>
+                    <span class="caption">Analyst</span>
+                    <span class="card-mail">danielaamet@team.com</span>
+                </div>
             </div>
         </div>
     </main>
