--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <p id="par">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            magna aliqua. Ut enim ad minim veniam, ex ea
             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur:</p>
         <div id="container" class="clearfix">
